// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select closes drop on esc 1`] = `
<div
  class="StyledDrop-bCWxPe eTlFvx"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS dFjuei"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS gTzfUh"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS hnAWDO"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              one
            </span>
          </div>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select closes drop on esc 2`] = `
"@media only screen and (max-width:699px) {
  .iiEOir {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hkehWd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hkehWd {
    padding: 3px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.eTlFvx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select closes drop on esc 3`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select closes drop on esc 4`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 1`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 2`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 3`] = `
<div
  class="StyledDrop-bCWxPe eTlFvx"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS dFjuei"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS gTzfUh"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS hnAWDO"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              one
            </span>
          </div>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select mounts 4`] = `
"@media only screen and (max-width:699px) {
  .iiEOir {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.eTlFvx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select mounts 5`] = `
<div
  class="StyledBox-bStriS hnAWDO"
  direction="column"
  role="menubar"
  tabindex="-1"
>
  <button
    class="StyledButton-gXzblK faBScD"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-bStriS jXXAwE"
      direction="column"
    >
      <span
        class="StyledText-eJMSZI eCycNH"
      >
        one
      </span>
    </div>
  </button>
  <button
    class="StyledButton-gXzblK faBScD"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-bStriS jXXAwE"
      direction="column"
    >
      <span
        class="StyledText-eJMSZI eCycNH"
      >
        two
      </span>
    </div>
  </button>
</div>
`;

exports[`Select mounts disabled 1`] = `
<button
  class="StyledButton-gXzblK gqMHaF"
  id="test-select"
  aria-label="undefined"
  disabled=""
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts disabled 2`] = `
<button
  class="StyledButton-gXzblK gqMHaF"
  id="test-select"
  aria-label="undefined"
  disabled=""
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts multiple 1`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        multiple=""
        tabindex="-1"
        readonly=""
        value="multiple"
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts multiple 2`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        multiple=""
        tabindex="-1"
        readonly=""
        value="multiple"
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts multiple 3`] = `
<div
  class="StyledDrop-bCWxPe eTlFvx"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS dFjuei"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS gTzfUh"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS hnAWDO"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK kZkhbU"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              one
            </span>
          </div>
        </button>
        <button
          class="StyledButton-gXzblK kZkhbU"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select mounts multiple 4`] = `
"@media only screen and (max-width:699px) {
  .iiEOir {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hkehWd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hkehWd {
    padding: 3px;
  }
}

@media only screen and (max-width:699px) {
  .jRztHH {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jRztHH {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .kZkhbU {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.eTlFvx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select mounts multiple 5`] = `
<div
  class="StyledBox-bStriS hnAWDO"
  direction="column"
  role="menubar"
  tabindex="-1"
>
  <button
    class="StyledButton-gXzblK kZkhbU"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-bStriS jXXAwE"
      direction="column"
    >
      <span
        class="StyledText-eJMSZI eCycNH"
      >
        one
      </span>
    </div>
  </button>
  <button
    class="StyledButton-gXzblK kZkhbU"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-bStriS jXXAwE"
      direction="column"
    >
      <span
        class="StyledText-eJMSZI eCycNH"
      >
        two
      </span>
    </div>
  </button>
</div>
`;

exports[`Select mounts with complex options and children 1`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts with complex options and children 2`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts with complex options and children 3`] = `
<div
  class="StyledDrop-bCWxPe eTlFvx"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS dFjuei"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS gTzfUh"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS hnAWDO"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <span>
            one
          </span>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <span>
            two
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select mounts with complex options and children 4`] = `
"@media only screen and (max-width:699px) {
  .iiEOir {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.eTlFvx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select mounts with search 1`] = `
<div
  class="StyledDrop-bCWxPe eTlFvx"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS dFjuei"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS hkehWd"
      direction="column"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
      >
        <input
          type="search"
          class="StyledTextInput-bzOzsW ldldTo"
          autocomplete="off"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS gTzfUh"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS hnAWDO"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              one
            </span>
          </div>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select mounts with search 2`] = `
"@media only screen and (max-width:699px) {
  .iiEOir {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hkehWd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hkehWd {
    padding: 3px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.eTlFvx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select mounts with search 3`] = `
<input
  type="search"
  class="StyledTextInput-bzOzsW ldldTo"
  autocomplete="off"
  value=""
/>
`;

exports[`Select mounts with search 4`] = `
<div
  class="StyledDrop-bCWxPe eTlFvx"
  tabindex="-1"
  id="test-select__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS dFjuei"
    direction="column"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-bStriS hkehWd"
      direction="column"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
      >
        <input
          type="search"
          class="StyledTextInput-bzOzsW ldldTo"
          autocomplete="off"
          value="a"
        />
      </div>
    </div>
    <div
      class="StyledBox-bStriS gTzfUh"
      direction="column"
      overflow="auto"
    >
      <div
        class="StyledBox-bStriS hnAWDO"
        direction="column"
        role="menubar"
        tabindex="-1"
      >
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              one
            </span>
          </div>
        </button>
        <button
          class="StyledButton-gXzblK faBScD"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-bStriS jXXAwE"
            direction="column"
          >
            <span
              class="StyledText-eJMSZI eCycNH"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select mounts with search 5`] = `
"@media only screen and (max-width:699px) {
  .iiEOir {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .iiEOir {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .kzhXNn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gTzfUh {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hnAWDO {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jXXAwE {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hkehWd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hkehWd {
    padding: 3px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.eTlFvx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Select renders multiple 1`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW bhNKQj"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        multiple=""
        tabindex="-1"
        readonly=""
        value=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select renders size 1`] = `
<button
  class="StyledButton-gXzblK kGZImI"
  id="test-select"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS iiEOir"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW hjHbnR"
        id="test-select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
        value=""
      />
    </div>
    <div
      class="StyledBox-bStriS kzhXNn"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw cKOunL"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;
